#
#   This file is part of SST/macroscale:
#                The macroscale architecture simulator from the SST suite.
#   Copyright (c) 2009 Sandia Corporation.
#   This software is distributed under the BSD License.
#   Under the terms of Contract DE-AC04-94AL85000 with Sandia Corporation,
#   the U.S. Government retains certain rights in this software.
#   For more information, see the LICENSE file in the top
#   SST/macroscale directory.
#

include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libsstmac_stat.la

libsstmac_stat_la_LDFLAGS =

library_includedir=${includedir}/sstmac/statistics

nobase_library_include_HEADERS = \
  sdn_stats.h

libsstmac_stat_la_SOURCES =  \
  sdn_stats.cc
